objects/Location.object
<CustomObject>
    <fields>
        <fullName>Access_DB_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Access DB External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>VisitorAddress.Street  + &apos;, &apos; +  VisitorAddress.City + &apos;, &apos; +  VisitorAddress.State+ &apos;, &apos; +  VisitorAddress.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjacent_Land_Info__c</fullName>
        <description>Adjacent_land_use and Landscape details</description>
        <label>Adjacent Land Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether, this location is Active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visiting_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Address</label>
        <referenceTo>Address</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wildlife_Animal_intrusion__c</fullName>
        <label>Wildlife/Animal intrusion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Locations</fullName>
        <columns>Account__c</columns>
        <columns>Name</columns>
        <columns>VisitorAddress</columns>
        <columns>Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Locations</label>
    </listViews>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>This Record Type is for Non PSP</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSP_Farm</fullName>
        <active>true</active>
        <description>This Record Type is for PSP</description>
        <label>PSP Farm</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>